pictures added change it later

--- a/tourtravel/src/main/resources/templates/header.html
+++ b/tourtravel/src/main/resources/templates/header.html
@@ -80,16 +80,16 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Picture1.jpg" class="d-block w-100" alt="First slide">
+                <img src="shanti-stupa-leh-ladakh-image-picture-2048x1367.jpg" class="d-block w-100" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img src="tanmay photo 1.jpg" class="d-block w-100" alt="Second slide">
+                <img src="lakshwadeep.jpg" class="d-block w-100" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img src="https://via.placeholder.com/1920x1080" class="d-block w-100" alt="Third slide">
+                <img src="5c3daf7d0fc6b-Chitrakote Waterfalls Places to See.jpg" class="d-block w-100" alt="Third slide">
             </div>
             <div class="carousel-item">
-                <img src="https://via.placeholder.com/1920x1080" class="d-block w-100" alt="Third slide">
+                <img src="nvr-endng-anupam-EUwzrxkJAAY-unsplash-2048x1245.jpg" class="d-block w-100" alt="Third slide">
             </div>
             <div class="carousel-item">
                 <img src="https://via.placeholder.com/1920x1080" class="d-block w-100" alt="Third slide">
@@ -104,6 +104,49 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+    <style>
+        .section-background {
+            background-color: black;
+            color: white;
+        }
+    </style>
+    
+    <!-- Space for Description and Images -->
+    <div class="container mt-5 section-background">
+        <div class="row">
+            <!-- Description -->
+            <div class="col-md-6">
+                <h2>Description</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vel justo nec mi lacinia ullamcorper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec commodo risus arcu, sit amet consequat mi laoreet vitae.</p>
+            </div>
+            <!-- Images -->
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <img src="lakshwadeep.jpg" class="img-fluid" alt="Image 1">
+                        <p>Starting from Rs. 29000</p>
+                    </div>
+                    <div class="col-sm-6">
+                        <img src="shanti-stupa-leh-ladakh-image-picture-2048x1367.jpg" class="img-fluid" alt="Image 2">
+                        <p>Starting from Rs. 29000</p>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-sm-6">
+                        <img src="nvr-endng-anupam-EUwzrxkJAAY-unsplash-2048x1245.jpg" class="img-fluid" alt="Image 3">
+                        <p>Starting from Rs. 29000</p>
+                    </div>
+                    <div class="col-sm-6">
+                        <img src="5c3daf7d0fc6b-Chitrakote Waterfalls Places to See.jpg" class="img-fluid" alt="Image 4">
+                        <p>Starting from Rs. 29000</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+
+
 
 
 
