--- a/tourtravel/src/main/resources/templates/header.html
+++ b/tourtravel/src/main/resources/templates/header.html
@@ -29,6 +29,14 @@
 
 
 
+    <style>
+        /* Navbar link hover effect */
+        .navbar-nav .nav-link:hover {
+            background-color: yellow; /* Change the background color to yellow on hover */
+            color: black; /* Change the text color to black on hover */
+        }
+    </style>
+    
     <nav class="navbar navbar-expand-lg bg-secondary custom-navbar-yellow">
         <div class="container-fluid">
             <!-- Company Name -->
@@ -63,7 +71,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Packages</a>
                     </li>
-                    
+    
                 </ul>
     
                 <!-- Right side content - Search and Login -->
@@ -77,7 +85,7 @@
     </nav>
     
     <!-- Carousel -->
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide mt-0" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="shanti-stupa-leh-ladakh-image-picture-2048x1367.jpg" class="d-block w-100" alt="First slide">
@@ -91,9 +99,7 @@
             <div class="carousel-item">
                 <img src="nvr-endng-anupam-EUwzrxkJAAY-unsplash-2048x1245.jpg" class="d-block w-100" alt="Third slide">
             </div>
-            <div class="carousel-item">
-                <img src="https://via.placeholder.com/1920x1080" class="d-block w-100" alt="Third slide">
-            </div>
+    
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -112,7 +118,7 @@
     </style>
     
     <!-- Space for Description and Images -->
-    <div class="container mt-5 section-background">
+    <div class="container mt-0 section-background">
         <div class="row">
             <!-- Description -->
             <div class="col-md-6">
@@ -137,13 +143,8 @@
                         <p>Starting from Rs. 29000</p>
                     </div>
                     <div class="col-sm-6">
-                        <img src="5c3daf7d0fc6b-Chitrakote Waterfalls Places to See.jpg" class="img-fluid" alt="Image 4">
-                        <p>Starting from Rs. 29000</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+                        <
+    
     
 
 
